# ezmsg-neo

./: README.md  pyproject.toml
docs/source/: index.rst
docs/source/api/: index.rst
src/ezmsg/neo/: source.py
tests/: test_neo_source.py
tests/data/blackrock/: 20231027-125608-001.nev
