[project]
name = "ezmsg-neo"
version = "0.1.0"
description = "Load and stream data from neo files into ezmsg."
authors = [
  { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ezmsg",
    "neo>=0.13.3",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]

[tool.hatch.build.hooks.version]
path = "src/ezmsg/neo/__init__.py"
pattern = true

[tool.uv.sources]
ezmsg = { git = "https://github.com/ezmsg-org/ezmsg" }
